
    HIVE-1514. API to change fileformat and location of a partition
    (He Yongqiang via namit)

    HIVE-1528. JSON UDTF function
    (Ning Zhang via jvs)

    HIVE-1529. Add ANSI SQL covariance aggregate functions: covar_pop
    and covar_samp
    (Pierre Huyn via jvs)

    HIVE-1518. context_ngrams() UDAF for estimating top-k contextual
    n-grams
    (Mayank Lahiri via jvs)

  IMPROVEMENTS

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

    HIVE-1447. Speed up reflection method calls (Zheng via He Yongqiang)

    HIVE-1462. Report progress in FileSinkOperator works in multiple directory
    case
    (Siying Dong via Ning Zhang)

    HIVE-1469. replace isArray() calls and remove LOG.isInfoEnabled() in
    Operator.forward()
    (Yongqiang He via Ning Zhang)

    HIVE-1463. Hive output file names are unnecessarily large
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1229. Replace dependencies on HBase deprecated API.
    (Basab Maulik via jvs)

    HIVE-1513. hive starter scripts should load admin/user supplied script for
    configurability
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1495. supply correct information to hooks and lineage for
    index rebuild
    (He Yongqiang via jvs)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1524. Parallel Execution fails if mapred.job.name is set
    (Ning Zhang via jssarma)

    HIVE-1509. Hive should kill query if too many files are created by it
    (Ning Zhang via jssarma)

    HIVE-1471. CTAS should unescape column names in select-clause
    (Ning Zhang via jssarma)

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

    HIVE-1454. insert overwrite and CTAS fail in hive local mode
    (Joydeep Sen Sarma via He Yongqiang )
