@@ -50,6 +50,9 @@ Trunk -  Unreleased
     n-grams
     (Mayank Lahiri via jvs)
 
+    HIVE-1549. Add ANSI SQL correlation function CORR(X,Y).
+    (Pierre Huyn via jvs)
+
   IMPROVEMENTS
 
     HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
